Fixed cascading menus, hiding lower nav sub-menus, fixed alignment issues on Members page

--- a/wp-content/themes/retlehs-roots/css/less/justin.less
+++ b/wp-content/themes/retlehs-roots/css/less/justin.less
@@ -19,26 +19,106 @@ body { padding-top:0 !important; background:url("/img/bg-body.jpg") repeat; bord
 		#searchsubmit { float:left; .border-radius(0); width:35px; height:28px; margin:0 0 0 -1px; padding:0; font-size:0; line-height:0; text-indent:-9999px; background:url("/img/search-button.png") no-repeat; border-left:none; box-shadow:none; -moz-transition:none;
 			&:hover { background-position:0 100%; -moz-transition:none; }
 		 }
-	.main_nav { clear:both; float:left; width:100%; margin:18px 0 0 0; padding:0; list-style:none; }
-		.main_nav li { float:left; position:relative; }
-			.main_nav a { padding:10px 10px 18px; font-family: 'Inika', serif; font-size:1.8em; font-weight:normal; color:#d94827; display:block; }
-			.main_nav a.parent { padding-bottom:18px; background:url(/img/bg-main-nav-link.png) center bottom no-repeat; }
-				.main_nav li ul { width:170px; margin:0; padding:0; list-style:none; position:absolute; top:54px; left:0; visibility:hidden; }
-					.main_nav li li { float:none; }
-						.main_nav li li a { margin:0; padding:10px 18px; font-size:1.4em; color:#d94827; text-decoration:none; background:#fff; }
-						.main_nav li li a:hover { background:#000; color:#fff; }
-	#tagline { clear:left; float:left; font-family: 'Inika', serif; font-size:2.8em; font-weight:normal; margin:36px 0 23px; line-height:42px; }
-	.page-header { padding-top:19px; padding-bottom:0; border-bottom:none; }
-		.page-header h1, .entry-title { font-family: 'Inika', serif; font-size:1.8em; color:#d94827; }
-	#main p { font-family: 'Open Sans', sans-serif; font-size:1.1em; line-height:20px; }
 
-	.well { background-color:transparent; border:none; }
+body.page-id-43 {
+	text-align: left;
+}
 
-	footer#content-info { background:url(/img/bg-footer.png) left top repeat-x; border-top:none; }
-		footer#content-info ul { margin:0; padding:0; list-style:none; }
-			footer#content-info ul li { float:left; width:percentage(100/6/100); }
-				footer#content-info ul li a { padding-bottom:15px; font-family: 'Inika', serif; font-size:1.6em; }
-					footer#content-info ul ul a { font-size:1.1em; }
+.main_nav {
+	clear:both;
+	float:left;
+	width:100%;
+	margin:18px 0 0 0;
+	padding:0;
+	list-style:none;
+
+	li {
+		float:left;
+		position:relative;
+		padding-bottom: 0;
+
+		ul {
+			width: 200px;
+			margin:0;
+			padding:0;
+			list-style:none;
+			position:absolute;
+			top:54px; left:0; 
+			visibility:hidden;
+		}
+
+		li {
+			float:none;
+
+			a {
+				margin:0;
+				padding:10px 18px;
+				font-size:1.4em;
+				color:#d94827;
+				text-decoration:none;
+				background:#fff;
+
+				&:hover {
+					background:#000;
+					color:#fff;
+				}
+			}
+		}
+	}
+
+	a {
+		padding: 10px 10px 18px;
+		font-family: 'Inika', serif;
+		font-size: 1.8em;
+		font-weight: normal;
+		color: #d94827;
+		display: block;
+
+		&.parent {
+			padding-bottom: 18px;
+			background: url(/img/bg-main-nav-link.png) center bottom no-repeat;
+		}
+	}
+}
+
+#tagline { clear:left; float:left; font-family: 'Inika', serif; font-size:2.8em; font-weight:normal; margin:36px 0 23px; line-height:42px; }
+.page-header { padding-top:19px; padding-bottom:0; border-bottom:none; }
+	.page-header h1, .entry-title { font-family: 'Inika', serif; font-size:1.8em; color:#d94827; }
+#main p { font-family: 'Open Sans', sans-serif; font-size:1.1em; line-height:20px; }
+
+.well { background-color:transparent; border:none; }
+
+footer#content-info { 
+	background:url(/img/bg-footer.png) left top repeat-x; border-top:none;
+
+	ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+
+		ul {
+			a {
+				font-size:1.1em;
+			}
+		}
+	}
+
+	li {
+		float: left;
+		width: percentage(100/6/100);
+		text-align: center;
+
+		.caret, .dropdown-menu {
+			display: none;
+		}
+	}
+
+	a {
+		padding-bottom: 15px;
+		font-family: 'Inika', serif;
+		font-size: 1.2em;
+	}
+}
 
 @media (max-width: 481px) {
 	#tagline {
